[stub-idp] stub-idp and integration-tests compile
seems that a lot of the integration tests were not running :/